--- a/src/AssistModule/project.json
+++ b/src/AssistModule/project.json
@@ -1,7 +1,9 @@
-﻿{
+{
   "version": "1.0.0-*",
 
   "dependencies": {
+    "BCrypt.Net-Core": "1.1.0",
+    "Microsoft.AspNetCore.Cryptography.KeyDerivation": "1.0.0",
     "NETStandard.Library": "1.6.0"
   },
 
