--- a/src/AssistModule/project.json
+++ b/src/AssistModule/project.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "BCrypt.Net-Core": "1.1.0",
     "Microsoft.AspNetCore.Cryptography.KeyDerivation": "1.0.0",
-    "NETStandard.Library": "1.6.0"
+    "NETStandard.Library": "1.6.0",
+    "System.Security.Cryptography.Csp": "4.0.0"
   },
 
   "frameworks": {
